--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "fast-csv": "^2.4.1",
     "ganache-cli": "^6.1.0",
+    "lodash": "^4.17.10",
     "sol-merger": "^0.1.2",
     "solidity-coverage": "^0.5.0",
     "solium": "^1.1.6",
